--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       gtag('config', 'G-WRK1ZF8SS3');
     </script>
     <title>Yoga Jigsaw Puzzle</title>
-    <link rel="icon" href="https://cdn.glitch.global/34d4b680-898f-4fd7-b277-ec120f30bdfa/yoga_jigsaw.png?v=1698249534643"  type="image/x-icon">
+    <link rel="icon" href="assets/yoga_jigsaw.png"  type="image/x-icon">
     <link rel="manifest" href="manifest.json" >
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" >
